<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    tools:context=".ui.menu.MenuFragment">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="61dp"
        android:src="@drawable/icon_cookie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btnTapPower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:src="@drawable/icon_backgound_button_tap_power"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/btnMyBakery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:src="@drawable/icon_background_button_my_bakery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnTapPower" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_background_speed"
        app:layout_constraintBottom_toTopOf="@+id/btnTapPower"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/tvMenuSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/_4_142_sec"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageView4" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/sf_pro_display_heavy"
        android:text="@string/tap_power"
        android:textColor="@color/green"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnTapPower"
        app:layout_constraintStart_toStartOf="@+id/btnTapPower"
        app:layout_constraintTop_toTopOf="@+id/btnTapPower"
        app:layout_constraintVertical_bias="0.42000002" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/sf_pro_display_heavy"
        android:text="@string/my_bakery"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnMyBakery"
        app:layout_constraintStart_toStartOf="@+id/btnTapPower"
        app:layout_constraintTop_toTopOf="@+id/btnMyBakery"
        app:layout_constraintVertical_bias="0.42000002" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="11dp"
        android:fontFamily="@font/sf_pro_display_heavy"
        android:text="@string/_3_881_for_3_718_cookie"
        android:textColor="@color/yellow"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnTapPower"
        app:layout_constraintEnd_toEndOf="@+id/btnTapPower"
        app:layout_constraintTop_toTopOf="@+id/btnTapPower"
        app:layout_constraintVertical_bias="0.42000002" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:rotation="180"
        android:src="@drawable/button_back"
        app:layout_constraintBottom_toBottomOf="@+id/btnMyBakery"
        app:layout_constraintEnd_toEndOf="@+id/btnMyBakery"
        app:layout_constraintTop_toTopOf="@+id/btnMyBakery"
        app:layout_constraintVertical_bias="0.42000002" />

</androidx.constraintlayout.widget.ConstraintLayout>