<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    tools:context=".ui.shop.ShopFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/shopCard1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivShopCard1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_grey_background_shop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvScoreShopCard1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="sans-serif"
            android:text="@string/_0_cookie"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/ivShopCard1"
            app:layout_constraintTop_toTopOf="@+id/ivShopCard1" />

        <TextView
            android:id="@+id/tvSpeedShopCard1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:fontFamily="sans-serif"
            android:text="@string/_0_sec"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/ivShopCard1"
            app:layout_constraintTop_toBottomOf="@+id/tvScoreShopCard1" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="34dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/chef"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/ivShopCard1"
            app:layout_constraintStart_toEndOf="@+id/imageView15"
            app:layout_constraintTop_toTopOf="@+id/ivShopCard1" />

        <ImageView
            android:id="@+id/imageView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:src="@drawable/icon_chef"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/ivShopCard1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/shopCard2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shopCard1">

        <TextView
            android:id="@+id/tvScoreShopCard2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="sans-serif"
            android:text="@string/_0_cookie"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:translationZ="1dp"
            app:layout_constraintEnd_toEndOf="@+id/ivShopCard2"
            app:layout_constraintTop_toTopOf="@+id/ivShopCard2" />

        <TextView
            android:id="@+id/tvSpeedShopCard2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:fontFamily="sans-serif"
            android:text="@string/_0_sec"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:translationZ="1dp"
            app:layout_constraintEnd_toEndOf="@+id/ivShopCard2"
            app:layout_constraintTop_toBottomOf="@+id/tvScoreShopCard2" />

        <ImageView
            android:id="@+id/ivShopCard2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_grey_background_shop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="34dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/onfectioner"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/ivShopCard2"
            app:layout_constraintStart_toEndOf="@+id/imageView16"
            app:layout_constraintTop_toTopOf="@+id/ivShopCard2" />

        <ImageView
            android:id="@+id/imageView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:src="@drawable/icon_confectioner"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/ivShopCard2" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/shopCard3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shopCard2">

        <TextView
            android:id="@+id/tvScoreShopCard3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="sans-serif"
            android:text="@string/_0_cookie"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:translationZ="1dp"
            app:layout_constraintEnd_toEndOf="@+id/ivShopCard3"
            app:layout_constraintTop_toTopOf="@+id/ivShopCard3" />

        <TextView
            android:id="@+id/tvSpeedShopCard3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:fontFamily="sans-serif"
            android:text="@string/_0_sec"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:translationZ="1dp"
            app:layout_constraintEnd_toEndOf="@+id/ivShopCard3"
            app:layout_constraintTop_toBottomOf="@+id/tvScoreShopCard3" />

        <ImageView
            android:id="@+id/ivShopCard3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_grey_background_shop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="34dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/onfectioner"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/ivShopCard3"
            app:layout_constraintStart_toEndOf="@+id/imageView17"
            app:layout_constraintTop_toTopOf="@+id/ivShopCard3" />

        <ImageView
            android:id="@+id/imageView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:src="@drawable/icon_confectioner_two"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/ivShopCard3" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/shopCard4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/shopCard3">

        <TextView
            android:id="@+id/tvScoreShopCard4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="sans-serif"
            android:text="@string/_0_cookie"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:translationZ="1dp"
            app:layout_constraintEnd_toEndOf="@+id/ivShopCard4"
            app:layout_constraintTop_toTopOf="@+id/ivShopCard4" />

        <TextView
            android:id="@+id/tvSpeedShopCard4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:fontFamily="sans-serif"
            android:text="@string/_0_sec"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:translationZ="1dp"
            app:layout_constraintEnd_toEndOf="@+id/ivShopCard4"
            app:layout_constraintTop_toBottomOf="@+id/tvScoreShopCard4" />

        <ImageView
            android:id="@+id/ivShopCard4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_grey_background_shop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="21dp"
            android:src="@drawable/icon_baker"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/ivShopCard4" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="34dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/baker"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/ivShopCard4"
            app:layout_constraintStart_toEndOf="@+id/imageView18"
            app:layout_constraintTop_toTopOf="@+id/ivShopCard4" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/shopCard5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/shopCard4">

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="34dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/baker"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:translationZ="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView19"
            app:layout_constraintTop_toTopOf="@+id/ivShopCard5" />

        <TextView
            android:id="@+id/tvScoreShopCard5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="sans-serif"
            android:text="@string/_0_cookie"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:translationZ="1dp"
            app:layout_constraintEnd_toEndOf="@+id/ivShopCard5"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvSpeedShopCard5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:fontFamily="sans-serif"
            android:text="@string/_0_sec"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:translationZ="1dp"
            app:layout_constraintEnd_toEndOf="@+id/ivShopCard5"
            app:layout_constraintTop_toBottomOf="@+id/tvScoreShopCard5" />

        <ImageView
            android:id="@+id/ivShopCard5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_grey_background_shop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:src="@drawable/icon_chef_two"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/ivShopCard5" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>